# consumet.rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  output.txt
.github/: CODEOWNERS
docs/: README.md
docs/flixhq/: README.md
docs/flixhq/guides/: movies.md
docs/flixhq/providers/: flixhq.md
docs/guides/: contributing.md  getting-started.md  movies.md
docs/providers/: flixhq.md
examples/: dramacool.rs  flixhq.rs  media_info.rs  search.rs  server.rs  sources.rs
provider-templates/: movies.md  movies_html.md
src/: lib.rs  main.rs
src/extractors/: asianload.rs  bilibili.rs  filemoon.rs  gogocdn.rs  kwik.rs  megacloud.rs  mixdrop.rs  mod.rs  mp4player.rs  mp4upload.rs  rapidcloud.rs  smashystream.rs  streamhub.rs  streamlare.rs  streamsb.rs  streamtape.rs  streamwish.rs  vidcloud.rs  vidmoly.rs  vizcloud.rs  voe.rs
src/html/movies/: dramacool_html.rs  flixhq_html.rs  mod.rs
src/models/: anime_parser.rs  base_parser.rs  base_provider.rs  base_types.rs  book_parser.rs  comic_parser.rs  lightnovel_parser.rs  manga_parser.rs  mod.rs  movie_parser.rs  news_parser.rs  type_objects.rs  types.rs  video_extractor.rs
src/providers/: mod.rs
src/providers/movies/: dramacool.rs  dramacool_html.rs  flixhq.rs  flixhq_html.rs  fmovies.rs  mod.rs
src/utils/: decrypt.rs  get_comics.rs  logger.rs  mod.rs  queries.rs  util_funcs.rs
templates/: movies.md  movies_html.md
