[package]
name = "consumet-api-rs"
version = "0.2.1"
edition = "2021"
description = "Consumet API RIIR"
license-file = "LICENSE"
repository = "https://github.com/carrotshniper21/consumet-api-rs"
readme = "README.md"
authors = ["eatmynerds <vipershniper07@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.26"
log = "0.4.19"
log4rs = "1.2.0"
openssl = "0.10.55"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
visdom = "0.5.10"
