[package]
name = "consumet"
version = "0.0.11"
edition = "2021"
description = "Consumet API RIIR"
license-file = "LICENSE"
repository = "https://github.com/eatmynerds/consumet.rs"
readme = "README.md"
authors = ["eatmynerds <vipershniper08@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4.26"
futures = "0.3.30"
lazy_static = "1.4.0"
openssl = "0.10.55"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
visdom = "0.5.10"
